--- a/GarciaMariaPablo/src/main/resources/application.properties
+++ b/GarciaMariaPablo/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 spring.application.name=GarciaMariaPablo
 
+spring.thymeleaf.cache=false
+spring.mvc.hiddenmethod.filter.enabled=true
+
+server.address=0.0.0.0
 server.port=9001
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.datasource.url=jdbc:h2:./db/gestorIncidencias
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
