--- a/GarciaMariaPablo/src/main/resources/application.properties
+++ b/GarciaMariaPablo/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.mvc.hiddenmethod.filter.enabled=true
 server.address=0.0.0.0
 server.port=9001
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.datasource.url=jdbc:h2:./db/gestorIncidencias
