--- a/GarciaMariaPablo/src/main/resources/application.properties
+++ b/GarciaMariaPablo/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.thymeleaf.cache=false
 spring.mvc.hiddenmethod.filter.enabled=true
 
 server.address=0.0.0.0
-server.port=9000
+server.port=9001
 
 #spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -13,3 +13,10 @@ spring.datasource.url=jdbc:h2:./db/gestorIncidencias
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=cuentapablo047@gmail.com
+spring.mail.password=syqm itqc usui hqpa
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
