--- a/GarciaMariaPablo/pom.xml
+++ b/GarciaMariaPablo/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.salesianostriana.dam</groupId>
 	<artifactId>GarciaMariaPablo</artifactId>
-	<version>2.1.0</version>
+	<version>2.1.1</version>
 	<name>GarciaMariaPablo</name>
 	<description>Proyecto de final de curso para el primer curso de Desarrollo de Aplicaciones Multiplataforma en los salesianos de triana en el curso 24-25, realizado por Pablo Garcia Maria</description>
 	<url/>
@@ -30,6 +30,12 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.13.3</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
